Fix z-index

--- a/src/components/importwms/style/importwms.less
+++ b/src/components/importwms/style/importwms.less
@@ -5,6 +5,10 @@
   padding: 10px;
   width: 740px;
   height: 358px;
+  
+  form {
+    z-index: 100; 
+  }
 
   > div {
     position: relative;
@@ -61,6 +65,7 @@
     border: 1px solid #dddddd;
     border-collapse: separate;
     border-radius: 4px;
+    z-index: 50;
   }
 
   .table-content-container {
